add cover to game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <div class="page-wrapper">
+      <section class="cover-wrapper">
+        <img src="theme/cover.jpg"/>
+      </section>
+
       <div class="game-wrapper">
         <canvas id="loadingCanvas" oncontextmenu="event.preventDefault()" width="800" height="600"></canvas>
         <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
