--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
             <img src="theme/cover.jpg"/>
           </div>
 
-          <canvas
-            id="loadingCanvas"
-            oncontextmenu="event.preventDefault()"
-            width="800"
-            height="600"
-          ></canvas>
+          <div
+            class="canvas-wrapper"
+          >
+            <canvas
+              id="loadingCanvas"
+              oncontextmenu="event.preventDefault()"
+              width="800"
+              height="600"
+            ></canvas>
 
-          <canvas
-            id="canvas"
-            oncontextmenu="event.preventDefault()"
-          ></canvas>
+            <canvas
+              id="canvas"
+              oncontextmenu="event.preventDefault()"
+            ></canvas>
+          </div>
         </main>
 
         <footer>
